<resources>
    <string name="app_name">Qualis</string>
    <string name="content_filtro">Filtro</string>
    <string name="content_periodicos_section">Periódicos</string>
    <string name="content_conferencias_section">CONFERÊNCIAS</string>
    <string name="content_correlacao_section">CORRELAÇÃO COM + 1 ÁREA</string>
    <string name="logo_edu_search">Logo do Edu Search</string>
    <string name="about_edu_search_content">PESQUISE OS QUALIS DE PERIÓDICOS E CONFERÊNCIAS E VEJA A CORRELAÇÃO COM A ÁREA DA COMPUTAÇÃO.</string>
    <string name="button_update_db">Atualizar Dados</string>
    <string name="update_db_content">Data da última atualização:</string>
    <string name="button_filter_section_content">Filtro</string>
    <string name="button_sort_section_content">Maior Extrato</string>
    <string name="periodico_column">Periódico</string>
    <string name="area_column">Área</string>
    <string name="extrato_capes">Extrato Capes</string>
    <string name="filter_image_content">Imagem de filtro de qualis</string>
    <string name="conferencia_column">Conferência</string>

    <string-array name="categories">
        <item>Todos</item>
        <item>A1</item>
        <item>A2</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
        <item>B5</item>
        <item>C</item>
    </string-array>

</resources>