<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/screen_base" />

    <ImageView
        android:id="@+id/edu_search_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_edu_search"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/edu_search_logo" />

    <TextView
        android:id="@+id/edu_search_about"
        android:layout_width="195dp"
        android:layout_height="85dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/inter"
        android:text="@string/about_edu_search_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edu_search_logo" />

    <Button
        android:id="@+id/button_update_database"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/refresh_page_option"
        android:fontFamily="@font/inter"
        android:text="@string/button_update_db"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edu_search_about"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/update_date_db_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_db_content"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_update_database"
        app:layout_constraintVertical_bias="0.257" />


</androidx.constraintlayout.widget.ConstraintLayout>